--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,24 @@
 {
   "name": "google-ads",
+  "version": "0.0.1",
   "description": "Google Ad elements",
+  "authors": [
+    "Simon Green <simon@captaincodeman.com>"
+  ],
   "main": "index.html",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/github.com/CaptainCodeman/google-ads.git"
+  },
+  "homepage": "http://captaincodeman.github.io/google-ads/",
+  "keywords": [
+    "polymer",
+    "web-components",
+    "ads",
+    "dfp",
+    "doubleclick",
+    "adsense"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0-rc.2",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#2.0-preview",
@@ -15,5 +32,6 @@
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.2"
-  }
+  },
+  "license": "MIT"
 }
